// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`List item examples AccountClickthroughListComponent should render correctly 1`] = `
<div>
  <section
    aria-label="Accounts"
    style="max-inline-size: 343px;"
  >
    <div
      class="v-mb-6 v-typography-label"
      vmb="6"
      vtypography="label"
    >
      Accounts
    </div>
    <ul
      class="v-content-card v-p-4"
      style="--v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
      v-content-card=""
      vp="4"
    >
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <a
          buttoncolor="tertiary"
          class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-0 v-pr-4 v-py-6 v-typography-label-large"
          href="./components/list-item"
          style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
          type="button"
          v-button=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpl="0"
          vpr="4"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-3 v-flex v-flex-row"
            vflex=""
            vgap="3"
          >
            <div
              style="inline-size: 5px; block-size: 56px; border-radius: 10px; background-color: rgb(24, 56, 92);"
            />
            <div
              class="v-gap-8 v-align-items-center v-flex v-flex-row"
              valignitemscenter=""
              vflex=""
              vgap="8"
            >
              <div
                class="v-align-items-center v-flex v-flex-row v-justify-content-center"
                style="border-radius: 4px; inline-size: 40px; block-size: 25px; background-color: rgb(24, 56, 92);"
                valignitemscenter=""
                vflex=""
                vjustifycontentcenter=""
              >
                <svg
                  aria-hidden="false"
                  aria-label="Visa"
                  class="v-logo"
                  height="10"
                  style="fill: white;"
                  v-logo-visa=""
                  viewBox="0 0 156 51"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="v-flex v-flex-col"
                style="color: var(--palette-default-text);"
                vflex=""
                vflexcol=""
              >
                <span
                  class="v-typography-overline"
                  vtypography="overline"
                >
                  •••• 1111
                </span>
                <span
                  class="v-typography-label"
                  vtypography="label"
                >
                  Digital Bank Card
                </span>
              </div>
            </div>
          </div>
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <span
              class="v-typography-subtitle-3"
              style="color: var(--palette-default-text);"
              vtypography="subtitle-3"
            >
              $1,234.56
            </span>
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              style="color: var(--palette-default-active);"
              v-icon-visa-chevron-right-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
              />
            </svg>
          </div>
        </a>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <a
          buttoncolor="tertiary"
          class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-0 v-pr-4 v-py-6 v-typography-label-large"
          href="./components/list-item"
          style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
          type="button"
          v-button=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpl="0"
          vpr="4"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-3 v-flex v-flex-row"
            vflex=""
            vgap="3"
          >
            <div
              style="inline-size: 5px; block-size: 56px; border-radius: 10px; background-color: rgb(48, 131, 66);"
            />
            <div
              class="v-gap-8 v-align-items-center v-flex v-flex-row"
              valignitemscenter=""
              vflex=""
              vgap="8"
            >
              <div
                class="v-align-items-center v-flex v-flex-row v-justify-content-center"
                style="border-radius: 4px; inline-size: 40px; block-size: 25px; background-color: rgb(48, 131, 66);"
                valignitemscenter=""
                vflex=""
                vjustifycontentcenter=""
              >
                <svg
                  aria-hidden="false"
                  aria-label="Visa"
                  class="v-logo"
                  height="10"
                  style="fill: white;"
                  v-logo-visa=""
                  viewBox="0 0 156 51"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="v-flex v-flex-col"
                style="color: var(--palette-default-text);"
                vflex=""
                vflexcol=""
              >
                <span
                  class="v-typography-overline"
                  vtypography="overline"
                >
                  •••• 2222
                </span>
                <span
                  class="v-typography-label"
                  vtypography="label"
                >
                  Digital Bank Card
                </span>
              </div>
            </div>
          </div>
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <span
              class="v-typography-subtitle-3"
              style="color: var(--palette-default-text);"
              vtypography="subtitle-3"
            >
              $1,234.56
            </span>
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              style="color: var(--palette-default-active);"
              v-icon-visa-chevron-right-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
              />
            </svg>
          </div>
        </a>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <a
          buttoncolor="tertiary"
          class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-0 v-pr-4 v-py-6 v-typography-label-large"
          href="./components/list-item"
          style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
          type="button"
          v-button=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpl="0"
          vpr="4"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-3 v-flex v-flex-row"
            vflex=""
            vgap="3"
          >
            <div
              style="inline-size: 5px; block-size: 56px; border-radius: 10px; background-color: rgb(166, 48, 75);"
            />
            <div
              class="v-gap-8 v-align-items-center v-flex v-flex-row"
              valignitemscenter=""
              vflex=""
              vgap="8"
            >
              <div
                class="v-align-items-center v-flex v-flex-row v-justify-content-center"
                style="border-radius: 4px; inline-size: 40px; block-size: 25px; background-color: rgb(166, 48, 75);"
                valignitemscenter=""
                vflex=""
                vjustifycontentcenter=""
              >
                <svg
                  aria-hidden="false"
                  aria-label="Visa"
                  class="v-logo"
                  height="10"
                  style="fill: white;"
                  v-logo-visa=""
                  viewBox="0 0 156 51"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="v-flex v-flex-col"
                style="color: var(--palette-default-text);"
                vflex=""
                vflexcol=""
              >
                <span
                  class="v-typography-overline"
                  vtypography="overline"
                >
                  •••• 3333
                </span>
                <span
                  class="v-typography-label"
                  vtypography="label"
                >
                  Digital Bank Card
                </span>
              </div>
            </div>
          </div>
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <span
              class="v-typography-subtitle-3"
              style="color: var(--palette-default-text);"
              vtypography="subtitle-3"
            >
              $1,234.56
            </span>
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              style="color: var(--palette-default-active);"
              v-icon-visa-chevron-right-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
              />
            </svg>
          </div>
        </a>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <a
          buttoncolor="tertiary"
          class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-0 v-pr-4 v-py-6 v-typography-label-large"
          href="./components/list-item"
          style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
          type="button"
          v-button=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpl="0"
          vpr="4"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-3 v-flex v-flex-row"
            vflex=""
            vgap="3"
          >
            <div
              style="inline-size: 5px; block-size: 56px; border-radius: 10px; background-color: rgb(21, 105, 207);"
            />
            <div
              class="v-gap-8 v-align-items-center v-flex v-flex-row"
              valignitemscenter=""
              vflex=""
              vgap="8"
            >
              <div
                class="v-align-items-center v-flex v-flex-row v-justify-content-center"
                style="border-radius: 4px; inline-size: 40px; block-size: 25px; background-color: rgb(21, 105, 207);"
                valignitemscenter=""
                vflex=""
                vjustifycontentcenter=""
              >
                <svg
                  aria-hidden="false"
                  aria-label="Visa"
                  class="v-logo"
                  height="10"
                  style="fill: white;"
                  v-logo-visa=""
                  viewBox="0 0 156 51"
                  width="30"
                >
                  <path
                    clip-rule="evenodd"
                    d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="v-flex v-flex-col"
                style="color: var(--palette-default-text);"
                vflex=""
                vflexcol=""
              >
                <span
                  class="v-typography-overline"
                  vtypography="overline"
                >
                  •••• 4444
                </span>
                <span
                  class="v-typography-label"
                  vtypography="label"
                >
                  Digital Bank Card
                </span>
              </div>
            </div>
          </div>
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <span
              class="v-typography-subtitle-3"
              style="color: var(--palette-default-text);"
              vtypography="subtitle-3"
            >
              $1,234.56
            </span>
            <svg
              aria-hidden="true"
              class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              style="color: var(--palette-default-active);"
              v-icon-visa-chevron-right-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
              />
            </svg>
          </div>
        </a>
      </li>
      
    </ul>
  </section>
</div>
`;

exports[`List item examples CheckboxListComponent should render correctly 1`] = `
<div>
  <fieldset
    aria-labelledby="checkbox-list-title"
    style="max-inline-size: 343px;"
  >
    <legend
      class="v-mb-6 v-typography-label"
      id="checkbox-list-title"
      vmb="6"
      vtypography="label"
    >
      Section title
    </legend>
    <ul
      class="v-content-card v-gap-4 v-flex v-flex-col v-m-0 v-p-4"
      style="--v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
      v-content-card=""
      vflex=""
      vflexcol=""
      vgap="4"
      vm="0"
      vp="4"
    >
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="checkbox-list-1"
          id="a-v-label-0"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-checkbox"
              id="checkbox-list-1"
              name="checkbox-list"
              style="--v-checkbox-glow-offset: 0px;"
              type="checkbox"
              v-checkbox=""
            />
             Item A label 1 
          </div>
          <span>
            Item A label 2
          </span>
        </label>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="checkbox-list-2"
          id="a-v-label-1"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-checkbox"
              id="checkbox-list-2"
              name="checkbox-list"
              style="--v-checkbox-glow-offset: 0px;"
              type="checkbox"
              v-checkbox=""
            />
             Item B label 1 
          </div>
          <span>
            Item B label 2
          </span>
        </label>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="checkbox-list-3"
          id="a-v-label-2"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-checkbox"
              id="checkbox-list-3"
              name="checkbox-list"
              style="--v-checkbox-glow-offset: 0px;"
              type="checkbox"
              v-checkbox=""
            />
             Item C label 1 
          </div>
          <span>
            Item C label 2
          </span>
        </label>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="checkbox-list-4"
          id="a-v-label-3"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-checkbox"
              id="checkbox-list-4"
              name="checkbox-list"
              style="--v-checkbox-glow-offset: 0px;"
              type="checkbox"
              v-checkbox=""
            />
             Item D label 1 
          </div>
          <span>
            Item D label 2
          </span>
        </label>
      </li>
      
    </ul>
  </fieldset>
</div>
`;

exports[`List item examples ClickthroughListComponent should render correctly 1`] = `
<div>
  <ul
    class="v-content-card v-p-4"
    style="max-inline-size: 343px; --v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
    v-content-card=""
    vp="4"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        href="./components/list-item"
        style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        Item A label 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="color: var(--palette-default-active);"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        href="./components/list-item"
        style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        Item B label 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="color: var(--palette-default-active);"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        href="./components/list-item"
        style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        Item C label 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="color: var(--palette-default-active);"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        href="./components/list-item"
        style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        Item D label 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="color: var(--palette-default-active);"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
    
  </ul>
</div>
`;

exports[`List item examples DefaultCheckboxListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <label
        class="v-action v-action-secondary v-gap-8 v-align-items-center v-flex v-flex-row v-label v-px-8 v-py-6 v-typography-label-large"
        for="checkbox-control-1"
        id="a-v-label-0"
        style="border: unset; min-block-size: 64px; inline-size: 100%;"
        v-label=""
        valignitemscenter=""
        vflex=""
        vgap="8"
        vpx="8"
        vpy="6"
        vtypography="label-large"
      >
        <input
          class="v-checkbox"
          id="checkbox-control-1"
          name="default-checkbox"
          style="--v-checkbox-glow-offset: 0px;"
          type="checkbox"
          v-checkbox=""
        />
         Item label 
      </label>
    </li>
  </ul>
</div>
`;

exports[`List item examples DefaultClickthroughListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        href="./components/list-item"
        style="color: var(--palette-default-text); --v-button-default-border-radius: 0px; min-block-size: 64px;"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        Item label 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          style="color: var(--palette-default-active);"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List item examples DefaultListComponent should render correctly 1`] = `
<div>
  <ul
    class="v-content-card v-p-4"
    style="max-inline-size: 343px; --v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
    v-content-card=""
    vp="4"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item A label 1
      </span>
      <span>
        Item A label 2
      </span>
    </li>
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item B label 1
      </span>
      <span>
        Item B label 2
      </span>
    </li>
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item C label 1
      </span>
      <span>
        Item C label 2
      </span>
    </li>
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item D label 1
      </span>
      <span>
        Item D label 2
      </span>
    </li>
    
  </ul>
</div>
`;

exports[`List item examples DefaultListWithDividersComponent should render correctly 1`] = `
<div>
  <ul
    class="v-content-card v-p-4"
    style="max-inline-size: 343px; --v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
    v-content-card=""
    vp="4"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item A label 1
      </span>
      <span>
        Item A label 2
      </span>
    </li>
    <hr
      aria-hidden="true"
      class="v-divider v-divider-decorative"
      dividertype="decorative"
      v-divider=""
    />
    
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item B label 1
      </span>
      <span>
        Item B label 2
      </span>
    </li>
    <hr
      aria-hidden="true"
      class="v-divider v-divider-decorative"
      dividertype="decorative"
      v-divider=""
    />
    
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item C label 1
      </span>
      <span>
        Item C label 2
      </span>
    </li>
    <hr
      aria-hidden="true"
      class="v-divider v-divider-decorative"
      dividertype="decorative"
      v-divider=""
    />
    
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item D label 1
      </span>
      <span>
        Item D label 2
      </span>
    </li>
    
    
  </ul>
</div>
`;

exports[`List item examples DefaultListWithSectionTitleAndHyperlinkComponent should render correctly 1`] = `
<div>
  <section
    aria-label="section title"
    style="max-inline-size: 343px;"
  >
    <div
      class="v-align-items-center v-flex v-flex-row v-justify-content-between v-mb-6 v-typography-label"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vmb="6"
      vtypography="label"
    >
      <span>
        Section title
      </span>
      <a
        class="v-link v-link-no-underline v-typography-label"
        href="./components/list-item"
        nounderline=""
        v-link=""
        vtypography="label"
      >
         Hyperlink 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </div>
    <ul
      class="v-content-card v-p-4"
      style="--v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
      v-content-card=""
      vp="4"
    >
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item A label 1
        </span>
        <span>
          Item A label 2
        </span>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item B label 1
        </span>
        <span>
          Item B label 2
        </span>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item C label 1
        </span>
        <span>
          Item C label 2
        </span>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item D label 1
        </span>
        <span>
          Item D label 2
        </span>
      </li>
      
    </ul>
  </section>
</div>
`;

exports[`List item examples DefaultListWithTitleComponent should render correctly 1`] = `
<div>
  <section
    aria-label="List title"
    style="max-inline-size: 343px;"
  >
    <div
      class="v-mb-6 v-typography-label"
      vmb="6"
      vtypography="label"
    >
      List title
    </div>
    <ul
      class="v-content-card v-p-4"
      style="--v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
      v-content-card=""
      vp="4"
    >
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item A label 1
        </span>
        <span>
          Item A label 2
        </span>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item B label 1
        </span>
        <span>
          Item B label 2
        </span>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item C label 1
        </span>
        <span>
          Item C label 2
        </span>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <span>
          Item D label 1
        </span>
        <span>
          Item D label 2
        </span>
      </li>
      
    </ul>
  </section>
</div>
`;

exports[`List item examples DefaultRadioListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <label
        class="v-action v-action-secondary v-gap-8 v-align-items-center v-flex v-flex-row v-label v-px-8 v-py-6 v-typography-label-large"
        for="radio-control-1"
        id="a-v-label-0"
        style="border: unset; min-block-size: 64px; inline-size: 100%;"
        v-label=""
        valignitemscenter=""
        vflex=""
        vgap="8"
        vpx="8"
        vpy="6"
        vtypography="label-large"
      >
        <input
          class="v-radio"
          id="radio-control-1"
          name="default-radio"
          style="--v-radio-glow-offset: 0px;"
          type="radio"
          v-radio=""
        />
         Item label 
      </label>
    </li>
  </ul>
</div>
`;

exports[`List item examples DefaultSwitchListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-10 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-between v-px-8 v-py-6"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vflexwrap=""
      vgap="10"
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
    >
      <label
        class="v-label v-switch-label v-typography-label-large"
        for="switch-control-1"
        id="a-v-label-0"
        v-label=""
        v-switch-label=""
        vtypography="label-large"
      >
        Item label
      </label>
      <input
        class="v-switch"
        id="switch-control-1"
        name="default-switch"
        role="switch"
        type="checkbox"
        v-switch=""
      />
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledCardArtClickthroughListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        aria-disabled="true"
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        disabled="disabled"
        href="./components/list-item"
        role="link"
        style="--v-button-default-border-radius: 0px; min-block-size: 64px;"
        tabindex="-1"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <div
            class="v-align-items-center v-flex v-flex-row v-justify-content-center"
            style="background-color: var(--palette-default-active-pressed); opacity: 0.3; mix-blend-mode: luminosity; border-radius: 2px; inline-size: 40px; block-size: 25px;"
            valignitemscenter=""
            vflex=""
            vjustifycontentcenter=""
          >
            <svg
              aria-hidden="false"
              aria-label="Visa"
              class="v-logo"
              height="10"
              style="fill: white;"
              v-logo-visa=""
              viewBox="0 0 156 51"
              width="30"
            >
              <path
                clip-rule="evenodd"
                d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
           Item label 
        </div>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledCardArtWithNumberClickthroughListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        aria-disabled="true"
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        disabled="disabled"
        href="./components/list-item"
        role="link"
        style="--v-button-default-border-radius: 0px; min-block-size: 64px;"
        tabindex="-1"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <div
            class="v-gap-4 v-align-items-center v-flex v-flex-row v-typography-label"
            valignitemscenter=""
            vflex=""
            vgap="4"
            vtypography="label"
          >
            <div
              class="v-align-items-center v-flex v-flex-row v-justify-content-center"
              style="background-color: var(--palette-default-active-pressed); opacity: 0.3; mix-blend-mode: luminosity; border-radius: 2px; inline-size: 40px; block-size: 25px;"
              valignitemscenter=""
              vflex=""
              vjustifycontentcenter=""
            >
              <svg
                aria-hidden="false"
                aria-label="Visa"
                class="v-logo"
                height="10"
                style="fill: white;"
                v-logo-visa=""
                viewBox="0 0 156 51"
                width="30"
              >
                <path
                  clip-rule="evenodd"
                  d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
             •••• 1234 
          </div>
           Item label 
        </div>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledCheckboxListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <label
        class="v-action v-action-secondary v-gap-8 v-align-items-center v-flex v-flex-row v-label v-px-8 v-py-6 v-typography-label-large"
        for="checkbox-control-2"
        id="a-v-label-0"
        style="border: unset; min-block-size: 64px; inline-size: 100%;"
        v-label=""
        valignitemscenter=""
        vflex=""
        vgap="8"
        vpx="8"
        vpy="6"
        vtypography="label-large"
      >
        <input
          class="v-checkbox"
          disabled="disabled"
          id="checkbox-control-2"
          name="disabled-checkbox"
          style="--v-checkbox-glow-offset: 0px;"
          type="checkbox"
          v-checkbox=""
        />
         Item label 
      </label>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledClickthroughListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        aria-disabled="true"
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        disabled="disabled"
        href="./components/list-item"
        role="link"
        style="--v-button-default-border-radius: 0px; min-block-size: 64px;"
        tabindex="-1"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        Item label 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledLeadingIconClickthroughListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        aria-disabled="true"
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        disabled="disabled"
        href="./components/list-item"
        role="link"
        style="--v-button-default-border-radius: 0px; min-block-size: 64px;"
        tabindex="-1"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-generic v-icon-low v-icon-security-protection"
            focusable="false"
            height="24"
            style="--v-icon-height: 24px; --v-icon-width: 24px;"
            v-icon-generic-security-protection-low=""
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              class="v-icon-primary"
              d="M11.29 0.295288C11.682 -0.0985655 12.318 -0.0985655 12.71 0.295288C14.473 2.07229 16.7623 3.11703 19.1943 3.30603C20.2251 3.38817 20.9999 4.27045 21 5.29626V14.9398C20.9998 19.9417 16.9719 24.0004 12 24.0004C7.02812 24.0004 3.00019 19.9417 3 14.9398V5.29626C3.0001 4.27046 3.77487 3.38818 4.80664 3.30603C7.23764 3.11703 9.52704 2.07229 11.29 0.295288ZM12 2.36658C10.017 4.07647 7.57491 5.08825 5 5.29724V14.9388C5 18.8388 8.136 22.0004 12 22.0004C15.864 22.0004 19 18.8388 19 14.9388V5.29724C16.4251 5.08825 13.983 4.07647 12 2.36658ZM15.293 9.29333C15.684 8.90235 16.316 8.90239 16.707 9.29333C17.098 9.68334 17.098 10.3164 16.707 10.7074L11.707 15.7074C11.316 16.0972 10.6839 16.0973 10.293 15.7074L7.29297 12.7074C6.90209 12.3165 6.90219 11.6833 7.29297 11.2933C7.68395 10.9024 8.31603 10.9024 8.70703 11.2933L11 13.5853L15.293 9.29333Z"
            />
          </svg>
           Item label 
        </div>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledLeadingImageClickthroughListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <a
        aria-disabled="true"
        buttoncolor="tertiary"
        class="v-button v-button-tertiary v-align-items-center v-flex v-flex-row v-justify-content-between v-pl-8 v-pr-4 v-py-6 v-typography-label-large"
        disabled="disabled"
        href="./components/list-item"
        role="link"
        style="--v-button-default-border-radius: 0px; min-block-size: 64px;"
        tabindex="-1"
        type="button"
        v-button=""
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpl="8"
        vpr="4"
        vpy="6"
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <img
            alt="Alex Miller"
            class="v-avatar"
            src="imgs/alex-miller-stock.png"
            style="--v-avatar-size: 48px;"
            v-avatar=""
          />
           Item label 
        </div>
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledRadioListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-p-0"
      vp="0"
      vsurface=""
    >
      <label
        class="v-action v-action-secondary v-gap-8 v-align-items-center v-flex v-flex-row v-label v-px-8 v-py-6 v-typography-label-large"
        for="radio-control-2"
        id="a-v-label-0"
        style="border: unset; min-block-size: 64px; inline-size: 100%;"
        v-label=""
        valignitemscenter=""
        vflex=""
        vgap="8"
        vpx="8"
        vpy="6"
        vtypography="label-large"
      >
        <input
          class="v-radio"
          disabled="disabled"
          id="radio-control-2"
          name="disabled-radio"
          style="--v-radio-glow-offset: 0px;"
          type="radio"
          v-radio=""
        />
         Item label 
      </label>
    </li>
  </ul>
</div>
`;

exports[`List item examples DisabledSwitchListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-10 v-align-items-center v-flex v-flex-row v-flex-wrap v-justify-content-between v-px-8 v-py-6"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vflexwrap=""
      vgap="10"
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
    >
      <label
        class="v-label v-switch-label v-typography-label-large"
        for="switch-control-2"
        id="a-v-label-0"
        v-label=""
        v-switch-label=""
        vtypography="label-large"
      >
        Item label
      </label>
      <input
        class="v-switch"
        disabled="disabled"
        id="switch-control-2"
        name="disabled-switch"
        role="switch"
        type="checkbox"
        v-switch=""
      />
    </li>
  </ul>
</div>
`;

exports[`List item examples IndicatorLineListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-3 v-align-items-center v-flex v-flex-row v-pl-0 v-pr-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vgap="3"
      vpl="0"
      vpr="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <div
        style="background-color: var(--palette-default-active); inline-size: 5px; block-size: 56px; border-radius: 10px;"
      />
      <span>
        Item label
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples LeadingCardArtListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-8 v-align-items-center v-flex v-flex-row v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vgap="8"
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-center"
        style="background-color: var(--palette-default-active-pressed); border-radius: 2px; inline-size: 40px; block-size: 25px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentcenter=""
      >
        <svg
          aria-hidden="false"
          aria-label="Visa"
          class="v-logo"
          height="10"
          style="fill: white;"
          v-logo-visa=""
          viewBox="0 0 156 51"
          width="30"
        >
          <path
            clip-rule="evenodd"
            d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span>
        Item label
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples LeadingIconListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-8 v-align-items-center v-flex v-flex-row v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vgap="8"
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <svg
        aria-hidden="false"
        aria-label="information"
        class="v-icon v-icon-generic v-icon-information v-icon-low"
        focusable="false"
        height="24"
        style="color: var(--palette-default-active-subtle);"
        v-icon-generic-information-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-primary"
          d="M12 0C18.6273 0 24 5.37272 24 12C24 18.6273 18.6273 24 12 24C5.37272 24 0 18.6273 0 12C0 5.37272 5.37272 0 12 0ZM12 2C6.47728 2 2 6.47728 2 12C2 17.5227 6.47728 22 12 22C17.5227 22 22 17.5227 22 12C22 6.47728 17.5227 2 12 2ZM13.2598 9.26953L11.5898 17.9795H10.0898L11.7695 9.26953H13.2598ZM13 5.83008C13.2415 5.83212 13.4717 5.93414 13.6348 6.1123C13.7979 6.2906 13.8788 6.52963 13.8594 6.77051C13.8591 7.32259 13.4115 7.77051 12.8594 7.77051C12.6169 7.77143 12.3854 7.66915 12.2217 7.49023C12.058 7.31122 11.9774 7.07161 12 6.83008C12 6.27779 12.4477 5.83008 13 5.83008Z"
        />
      </svg>
      <span>
        Item label
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples LeadingIconWithBackgroundListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-8 v-align-items-center v-flex v-flex-row v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vgap="8"
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <div
        class="v-flex v-flex-row v-p-8"
        style="background-color: var(--palette-default-surface-3); border-radius: 4px;"
        vflex=""
        vp="8"
      >
        <svg
          aria-hidden="true"
          aria-label="account"
          class="v-icon v-icon-account v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          style="color: var(--palette-default-text-subtle); --v-icon-primary: currentColor; --v-icon-secondary: currentColor;"
          v-icon-visa-account-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
          />
        </svg>
      </div>
      <span>
        Item label
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples LeadingImageListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-8 v-align-items-center v-flex v-flex-row v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vgap="8"
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <img
        alt="Alex Miller"
        class="v-avatar"
        src="imgs/alex-miller-stock.png"
        v-avatar=""
      />
      <span>
        Item label
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples OneLineListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item label
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples OneLineTwoColumnListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item label 1
      </span>
      <span>
        Item label 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples RadioListComponent should render correctly 1`] = `
<div>
  <fieldset
    aria-labelledby="radio-list-title"
    style="max-inline-size: 343px;"
  >
    <legend
      class="v-mb-6 v-typography-label"
      id="radio-list-title"
      vmb="6"
      vtypography="label"
    >
      Section title
    </legend>
    <ul
      class="v-content-card v-gap-4 v-flex v-flex-col v-m-0 v-p-4"
      style="--v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
      v-content-card=""
      vflex=""
      vflexcol=""
      vgap="4"
      vm="0"
      vp="4"
    >
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="radio-list-1"
          id="a-v-label-0"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-radio"
              id="radio-list-1"
              name="radio-list"
              style="--v-radio-glow-offset: 0px;"
              type="radio"
              v-radio=""
            />
             Item A label 1 
          </div>
          <span>
            Item A label 2
          </span>
        </label>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="radio-list-2"
          id="a-v-label-1"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-radio"
              id="radio-list-2"
              name="radio-list"
              style="--v-radio-glow-offset: 0px;"
              type="radio"
              v-radio=""
            />
             Item B label 1 
          </div>
          <span>
            Item B label 2
          </span>
        </label>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="radio-list-3"
          id="a-v-label-2"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-radio"
              id="radio-list-3"
              name="radio-list"
              style="--v-radio-glow-offset: 0px;"
              type="radio"
              v-radio=""
            />
             Item C label 1 
          </div>
          <span>
            Item C label 2
          </span>
        </label>
      </li>
      <li
        class="v-surface v-p-0"
        vp="0"
        vsurface=""
      >
        <label
          class="v-action v-action-secondary v-align-items-center v-flex v-flex-row v-justify-content-between v-label v-px-8 v-py-6 v-typography-label-large"
          for="radio-list-4"
          id="a-v-label-3"
          style="border: unset; min-block-size: 64px; inline-size: 100%;"
          v-label=""
          valignitemscenter=""
          vflex=""
          vjustifycontentbetween=""
          vpx="8"
          vpy="6"
          vtypography="label-large"
        >
          <div
            class="v-gap-8 v-align-items-center v-flex v-flex-row"
            valignitemscenter=""
            vflex=""
            vgap="8"
          >
            <input
              class="v-radio"
              id="radio-list-4"
              name="radio-list"
              style="--v-radio-glow-offset: 0px;"
              type="radio"
              v-radio=""
            />
             Item D label 1 
          </div>
          <span>
            Item D label 2
          </span>
        </label>
      </li>
      
    </ul>
  </fieldset>
</div>
`;

exports[`List item examples ThreeLineListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-2 v-flex v-flex-col v-justify-content-center v-px-8 v-py-6"
      style="min-block-size: 64px;"
      vflex=""
      vflexcol=""
      vgap="2"
      vjustifycontentcenter=""
      vpx="8"
      vpy="6"
      vsurface=""
    >
      <span
        class="v-typography-label-large"
        vtypography="label-large"
      >
        Item label
      </span>
      <span
        class="v-typography-label"
        vtypography="label"
      >
        Secondary text
      </span>
      <span
        class="v-typography-label-small"
        vtypography="label-small"
      >
        Tertiary text
      </span>
    </li>
  </ul>
</div>
`;

exports[`List item examples TrailingCardArtListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item label
      </span>
      <div
        class="v-align-items-center v-flex v-flex-row v-justify-content-center"
        style="background-color: var(--palette-default-active-pressed); border-radius: 2px; inline-size: 40px; block-size: 25px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentcenter=""
      >
        <svg
          aria-hidden="false"
          aria-label="Visa"
          class="v-logo"
          height="10"
          style="fill: white;"
          v-logo-visa=""
          viewBox="0 0 156 51"
          width="30"
        >
          <path
            clip-rule="evenodd"
            d="M111.134 33.9989C111.164 26.325 104.81 22.9893 99.7247 20.3201C96.3099 18.5276 93.4677 17.0357 93.5169 14.7323C93.5529 12.9893 95.2167 11.1311 98.8467 10.6629C103.098 10.2519 107.381 10.9985 111.242 12.8236L113.453 2.53852C109.695 1.1258 105.714 0.394122 101.699 0.377777C89.3107 0.377777 80.5309 6.98244 80.4516 16.4465C80.3724 23.4257 86.6962 27.3438 91.4714 29.6702C96.3691 32.047 98.0185 33.574 97.9968 35.7059C97.9968 38.9686 94.0859 40.4019 90.4775 40.4595C84.3492 40.5572 80.7168 38.8625 77.8368 37.5187L77.5634 37.3913L75.2658 48.0365C78.2045 49.3906 83.6279 50.5646 89.253 50.6222C102.455 50.6222 111.098 44.0968 111.141 33.9989H111.134ZM59.0603 1.26366L38.6989 49.8587H25.4103L15.3917 11.0806C14.7795 8.68941 14.2537 7.81791 12.4027 6.80957C9.36321 5.1746 4.39351 3.63327 0 2.67535L0.302504 1.23485H21.6866C24.5639 1.24665 27.0063 3.34708 27.4486 6.19015L32.7424 34.3158L45.8653 1.26366H59.0603ZM155.573 49.8443H143.949L142.429 42.6059H126.303L123.681 49.8587H110.486L129.335 4.82889C130.228 2.66308 132.343 1.25366 134.686 1.26367H145.425L155.573 49.8443ZM129.918 32.6448L136.537 14.3937L140.347 32.6448H129.918ZM66.6373 49.8587L77.0664 1.26362H64.4621L54.0617 49.8587H66.6373Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List item examples TrailingIconListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item label
      </span>
      <svg
        aria-hidden="false"
        aria-label="information"
        class="v-icon v-icon-generic v-icon-information v-icon-low"
        focusable="false"
        height="24"
        style="color: var(--palette-default-active-subtle);"
        v-icon-generic-information-low=""
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          class="v-icon-primary"
          d="M12 0C18.6273 0 24 5.37272 24 12C24 18.6273 18.6273 24 12 24C5.37272 24 0 18.6273 0 12C0 5.37272 5.37272 0 12 0ZM12 2C6.47728 2 2 6.47728 2 12C2 17.5227 6.47728 22 12 22C17.5227 22 22 17.5227 22 12C22 6.47728 17.5227 2 12 2ZM13.2598 9.26953L11.5898 17.9795H10.0898L11.7695 9.26953H13.2598ZM13 5.83008C13.2415 5.83212 13.4717 5.93414 13.6348 6.1123C13.7979 6.2906 13.8788 6.52963 13.8594 6.77051C13.8591 7.32259 13.4115 7.77051 12.8594 7.77051C12.6169 7.77143 12.3854 7.66915 12.2217 7.49023C12.058 7.31122 11.9774 7.07161 12 6.83008C12 6.27779 12.4477 5.83008 13 5.83008Z"
        />
      </svg>
    </li>
  </ul>
</div>
`;

exports[`List item examples TrailingIconWithBackgroundListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item label
      </span>
      <div
        class="v-flex v-flex-row v-p-8"
        style="background-color: var(--palette-default-surface-3); border-radius: 4px;"
        vflex=""
        vp="8"
      >
        <svg
          aria-hidden="true"
          aria-label="account"
          class="v-icon v-icon-account v-icon-low v-icon-visa"
          focusable="false"
          height="24"
          style="color: var(--palette-default-text-subtle); --v-icon-primary: currentColor; --v-icon-secondary: currentColor;"
          v-icon-visa-account-low=""
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            class="v-icon-secondary"
            d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
          />
          <path
            class="v-icon-primary"
            d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
          />
        </svg>
      </div>
    </li>
  </ul>
</div>
`;

exports[`List item examples TrailingImageListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
      style="min-block-size: 64px;"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vpx="8"
      vpy="6"
      vsurface=""
      vtypography="label-large"
    >
      <span>
        Item label
      </span>
      <img
        alt="Alex Miller"
        class="v-avatar"
        src="imgs/alex-miller-stock.png"
        v-avatar=""
      />
    </li>
  </ul>
</div>
`;

exports[`List item examples TransactionsListComponent should render correctly 1`] = `
<div>
  <section
    aria-label="Transactions"
    style="max-inline-size: 343px;"
  >
    <div
      class="v-align-items-center v-flex v-flex-row v-justify-content-between v-mb-6 v-typography-label"
      valignitemscenter=""
      vflex=""
      vjustifycontentbetween=""
      vmb="6"
      vtypography="label"
    >
      <span>
        Transactions
      </span>
      <a
        class="v-link v-link-no-underline v-typography-label"
        href="./components/list-item"
        nounderline=""
        v-link=""
        vtypography="label"
      >
         See more 
        <svg
          aria-hidden="true"
          class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-chevron-right-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </a>
    </div>
    <ul
      class="v-content-card v-p-4"
      style="--v-content-card-border: 0px; --v-content-card-border-radius: 8px;"
      v-content-card=""
      vp="4"
    >
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <span
            aria-label="Merchant Name"
            class="v-avatar"
            role="img"
            v-avatar=""
          >
            MN
          </span>
          <span
            class="v-typography-body-3"
            vtypography="body-3"
          >
            Merchant name
          </span>
        </div>
        <div
          class="v-flex v-flex-col"
          style="text-align: end;"
          vflex=""
          vflexcol=""
        >
          <span
            class="v-typography-subtitle-2"
            vtypography="subtitle-2"
          >
            - $14.57
          </span>
          <span
            class="v-typography-color-subtle v-typography-label"
            vtypography="label"
            vtypographycolor="subtle"
          >
            $1,234.56
          </span>
        </div>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <span
            aria-label="Merchant Name"
            class="v-avatar"
            role="img"
            v-avatar=""
          >
            MN
          </span>
          <span
            class="v-typography-body-3"
            vtypography="body-3"
          >
            Merchant name
          </span>
        </div>
        <div
          class="v-flex v-flex-col"
          style="text-align: end;"
          vflex=""
          vflexcol=""
        >
          <span
            class="v-typography-subtitle-2"
            vtypography="subtitle-2"
          >
            - $14.57
          </span>
          <span
            class="v-typography-color-subtle v-typography-label"
            vtypography="label"
            vtypographycolor="subtle"
          >
            $1,234.56
          </span>
        </div>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <span
            aria-label="Merchant Name"
            class="v-avatar"
            role="img"
            v-avatar=""
          >
            MN
          </span>
          <span
            class="v-typography-body-3"
            vtypography="body-3"
          >
            Merchant name
          </span>
        </div>
        <div
          class="v-flex v-flex-col"
          style="text-align: end;"
          vflex=""
          vflexcol=""
        >
          <span
            class="v-typography-subtitle-2"
            vtypography="subtitle-2"
          >
            - $14.57
          </span>
          <span
            class="v-typography-color-subtle v-typography-label"
            vtypography="label"
            vtypographycolor="subtle"
          >
            $1,234.56
          </span>
        </div>
      </li>
      <li
        class="v-surface v-align-items-center v-flex v-flex-row v-justify-content-between v-px-8 v-py-6 v-typography-label-large"
        style="min-block-size: 64px;"
        valignitemscenter=""
        vflex=""
        vjustifycontentbetween=""
        vpx="8"
        vpy="6"
        vsurface=""
        vtypography="label-large"
      >
        <div
          class="v-gap-8 v-align-items-center v-flex v-flex-row"
          valignitemscenter=""
          vflex=""
          vgap="8"
        >
          <span
            aria-label="Merchant Name"
            class="v-avatar"
            role="img"
            v-avatar=""
          >
            MN
          </span>
          <span
            class="v-typography-body-3"
            vtypography="body-3"
          >
            Merchant name
          </span>
        </div>
        <div
          class="v-flex v-flex-col"
          style="text-align: end;"
          vflex=""
          vflexcol=""
        >
          <span
            class="v-typography-subtitle-2"
            vtypography="subtitle-2"
          >
            - $14.57
          </span>
          <span
            class="v-typography-color-subtle v-typography-label"
            vtypography="label"
            vtypographycolor="subtle"
          >
            $1,234.56
          </span>
        </div>
      </li>
      
    </ul>
  </section>
</div>
`;

exports[`List item examples TwoLineListItemComponent should render correctly 1`] = `
<div>
  <ul
    style="max-inline-size: 343px;"
  >
    <li
      class="v-surface v-gap-2 v-flex v-flex-col v-justify-content-center v-px-8 v-py-6"
      style="min-block-size: 64px;"
      vflex=""
      vflexcol=""
      vgap="2"
      vjustifycontentcenter=""
      vpx="8"
      vpy="6"
      vsurface=""
    >
      <span
        class="v-typography-label-large"
        vtypography="label-large"
      >
        Item label
      </span>
      <span
        class="v-typography-label"
        vtypography="label"
      >
        Secondary text
      </span>
    </li>
  </ul>
</div>
`;
